tests/miz/pass/types/pass_type_elaboration_chained_local_mode_reserved_variable_inequality_001.miz
definition
  mode BaseModeInequalityDef: BaseModeInequality is set;
end;

definition
  mode ChainModeInequalityDef: ChainModeInequality is BaseModeInequality;
end;

reserve x for ChainModeInequality;
theorem ChainedLocalModeReservedVariableInequalityPayloadBoundary: x <> x;
