tests/miz/fail/types/fail_type_elaboration_attributed_local_mode_structure_rhs_chain_evidence_gap_001.miz
definition
  let x be set;
  attr MarkedDef: x is marked means thesis;
end;

definition
  struct LocalStruct where
    field carrier -> set;
  end;
end;

definition
  mode BaseStructModeDef: BaseStructMode is LocalStruct;
end;

definition
  mode ChainStructModeDef: ChainStructMode is BaseStructMode;
end;

reserve z for marked ChainStructMode;
